app/assets/stylesheets/events.css.scss
// Place all the styles related to the Events controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#eventsmain {
	max-width: 1280px;
  margin: 0 auto;
	margin-top: 10px;
  margin-bottom: 2em;
  display: table;
}

#sidebar {
  padding: 0 20px;
  display: table-cell;
  vertical-align: top;
  
  form {
    margin-bottom: 1em;
  }
}

#eventsbody {
  width: 100%;
  padding-right: 1em;
  display: table-cell;
  vertical-align: top;
}

/* generic event list attributes */
table.eventslist {
	width: 99%;
	margin: 0 20px 0 0;
  
  .eventslist-data-list {
    padding-left: 0;
    margin-top: 0;
    margin-bottom: 0;
    
    li {
      list-style-type: none;
    }
  }
  
  .eventslist-week-marker {
    td {
      border: 0;
      
      &.marker {
        text-align: center;
        padding: 6px 0 2px;
        color: gray;
        font-style: italic;
      }
    }
  }
}

.eventslist td:first-child
{
  width: 3px;
}

table.eventslist > tbody > tr > th {
	border: 1px solid #BBBBBB;
	background: #F0F0F0;
}
table.eventslist > tbody > tr > td {
	border: 1px solid #BBBBBB;
	padding: 4px 7px;
	white-space: nowrap;
}
table.eventslist tr.list_header, table.eventslist tr.list_footer {
	color: #555555;
}
table.eventslist tr.list_header a, table.eventslist tr.list_footer a, #event-selector a {
	color: #9999FF;
}
table.eventslist td:first-child {
	padding: 0;
}

@media screen and (max-width: 985px) {
  #eventsbody, #sidebar {
    display: block;
    padding-right: 0; // prevents horizontal scrollbar on smaller screens
  }
}

.mobile-only {
  display: none;
}

@media screen and (max-width: 750px) {
  .mobile-only {
    display: block;
  }

  table.eventslist {
    display: block;
    padding: 20px;

    tbody,
    tr,
    th,
    td {
      display: block;
    }

    tbody > tr > td {
      white-space: wrap;

      .published br {
        display: none;
      }
    }

    tr.eventslist-header,
    tr.eventslist-week-marker td:first-child,
    .mobile-hide {
      display: none;
    }

    td .float-right {
      float: right;
      margin-top: -15px;
      padding-left: 5px;
    }

    .mobile-cols-2 {
      column-count: 2;
    }

    tr:not(.eventslist-week-marker) td:first-child {
      width: 100%;
    }

    tr {
      margin-bottom: 10px;
      border: 1px solid #ddd;
    }
  
    td:before {
      content: attr(data-label);
      font-weight: bold;
      display: block;
    }
  }
}

/* row colors */
table.eventslist tr.event_confirmed { background: #E2F2E2; }
table.eventslist tr.event_confirmed > td:first-child { background: #00FF00; font-size: 5px; }
table.eventslist tr.billing_pending { background: #E1EAEF; }
table.eventslist tr.billing_pending > td:first-child { background: #FF0000; font-size: 5px; }
table.eventslist tr.event_completed { background: #E1EAEF; }
table.eventslist tr.event_completed > td:first-child { background: #00A4FF; font-size: 5px; }
table.eventslist tr.event_cancelled { background: #F9F9F9; color: #AAAAAA; }
table.eventslist tr.event_cancelled > td:first-child { background: #ECECEC; font-size: 5px; }
table.eventslist tr.event_cancelled a { color: #9999FF; }
table.eventslist tr.quote_sent,
table.eventslist tr.details_requested { background: #F7F7D3; }
table.eventslist tr.quote_sent > td:first-child,
table.eventslist tr.details_requested > td:first-child { background: #FFFF00; font-size: 5px; }
table.eventslist tr.tentative_date,
table.eventslist tr.initial_request { background: #F2C7C7; }
table.eventslist tr.tentative_date > td:first-child,
table.eventslist tr.initial_request> td:first-child { background: #FF0000; font-size: 5px; }
table.eventslist tr.event_blackout { background: #666666; color: #DDDDDD; }
table.eventslist tr.event_blackout > td:first-child { background: #000000; font-size: 5px; }
table.eventslist tr.event_blackout a { color: #9999FF; }

/* cell styles */
table.eventslist small.published {
	color: #565656;
}
table.eventslist small.organization {
}
table.eventslist span.unknown {
	color: #EE6666;
}

table.eventslist .ticless {
  background: #F2C7C7;
  font-weight: bold;
}

#event-container {
  font-size: 11px;
}

@media (min-width: 1000px) {
  #event-container-left {
    width: 49%;
    float: left;
  }

  #event-container-right {
    width: 49%;
    float: right;
  }
}

#event-info {
  background: #f7f7f7;
  border: 1px solid #ccc;
  padding: .5em 1em;
  margin-bottom: 1em;
}

#event-info h2 {
  font-size: 21pt;
  font-weight: bold;
  color: #444;
  margin: 0;
}

#event-info p {
  margin-top: 0.5em;
  margin-bottom: 0;
}

#event-org {
  border-top: 1px solid #e0e0e0;
  border-bottom: 1px solid #e0e0e0;
  color: #505050;
  margin-bottom: .5em;
  padding: 7px 7px 6px 7px;
}

#event-org h3 {
  font-size: 11pt;
  margin: 0 7px 6px 0;
}

#event-flags {
  padding: 0;
  margin-top: 0.5em;
  margin-bottom: 0;
  
  li {
    display: inline;
  }
  
  li:after {
    content: ",";
  }
  
  li:last-child:after {
    content: "";
  }
}

#event-schedule table {
  width: 100%;
  margin-bottom: 1em;
  border-top: 1px solid #ccc;
  border-left: 1px solid #ccc;
  border-right: 1px solid #ccc;
}

#event-schedule table th {
  font-weight: bold;
  background-color: #f7f7f7;
  padding: 6px 12px;
}

#event-schedule td {
  background-color: #f9f9f9;
  border: 1px solid #ccc;
  padding: 6px 6px;
}

#event-schedule td:first-child {
  border-left: 0;
}

#event-schedule td.es-date {
  text-align: right;
  font-weight: bold;
  white-space: nowrap;
}

#event-schedule td.es-time {
  color: #222;
  white-space: nowrap;
}

#event-schedule td.es-name {
  white-space: nowrap;
}

#event-schedule td.es-locequip {
  border-right: none;
}

#event-schedule td.es-locequip ul.es-locs {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#event-schedule td p:first-child {
  margin-top: 0;
}

#event-schedule td p:last-child {
  margin-bottom: 0;
}

.es-roles ul,
#event-roles ul,
#event-more ul {
  padding: 0;
}

.es-roles ul li,
#event-roles ul li,
#event-more ul li {
  display: block;
}

#event-more ul li+li {
  margin-top: 4px;
}

#event-invoices {
  margin-bottom: 1em;
}

#event-comments {
  clear: both;
}

#event-comments fieldset+fieldset {
  margin-top: 1em;
}

#event-comments form {
  margin: 1em 0;
}

#event-comments form textarea {
  width: 100%;
  height: 5em;
}

#event-comments form input[type=submit] {
  margin-top: 1em;
}

.event-finance td.money,
.event-finance th.money {
  text-align: right;
}

.event-finance tr+tr {
  border-top: 1px solid #eee;
}

.event-finance {
  width: 100%;
  margin-top: .5em;
  border-left: 1px solid #ccc;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
}

.event-finance th {
  font-weight: bold;
  background-color: #f7f7f7;
  padding: 6px 12px;
  text-align: left;
  border-top: 1px solid #ccc;
}

.event-finance td {
  background-color: #f9f9f9;
  padding: 6px 6px;
  vertical-align: top;
}

.event-form fieldset {
  padding: 10px;
  border: 1px solid #666661;
  margin-bottom: 1em;
  max-width: 720px;
}

.event-form legend {
  background-color: #e0e0e0;
  color: black;
  font: 17px/21px Calibri, Arial, Helvetica, sans-serif;
  padding: 0 10px;
  margin: -26px 0 0 -11px;
  font-weight: bold;
  border: 1px solid black;
}

.event-form dl {
  display: table;
  margin: 0 0 5px 0;
  width: 100%;
}

.event-form dl+dl dt, .event-form dl+dl dd {
  padding-top: 1px;
}

.event-form dt {
  display: table-cell;
  text-align: right;
  width: 15%;
  line-height: 25px;
  margin: 0 10px 10px 0;
  padding-right: 1em;
  vertical-align: baseline;
}

.event-form dd {
  display: table-cell;
  line-height: 25px;
  margin: 0 0 10px 0;
  padding: 1px;
  vertical-align: baseline;
  
  img {
    vertical-align: sub;
  }
}

.event-form-full-input {
  width: 400px;
  max-width: 100%;
}

.event-form select {
  border: 0;
  outline: 1px solid #e0e0e0;
  font: 12px/21px Verdana, Arial, Helvetica, sans-serif;
}

.event-form textarea {
  width: 400px;
  max-width: 100%;
  height: 6em;
}

.event-form .big-field dt {
  vertical-align: top;
}

.event-form #event_org_new, .call-time-field, .strike-time-field {
  display: none;
}

.event-form .event-blackout-fields {
  display: none;
  margin-left: 4px;
}

.event-form-roles table, #event-form-attachments table {
  width: 100%;
  
  tr td {
    align: center;
    padding: .5em 1em;
  }
  
  tbody tr td {
    select, input {
      width: 100%;
    }
  }
}

legend + .event-date-form {
  padding-top: 0;
}

.event-date-form {
  border-bottom: 1px dashed black;
  border-left: 1px solid black;
  border-right: 1px solid black;
  padding: 1em 10px 1em 10px;
  margin: 0 -11px 0 -11px;
  
  &:nth-child(odd) {
    background-color: #f9f9f9;
  }
}

.event-email-full+.event-email-full {
  margin-top: 1em;
  border-top: 1px dashed black;
  padding-top: 1em;
}

#event-form-submit {
  clear: both;
  width: 100%;
}

#event-selector {
  text-align: center;
  margin-bottom: 3px;
}

#event-sel-time {
  margin-left: 2em;
}

#event-sel-title {
  margin-right: 2em;
  font-weight: bold;
}

// put time (past/future) selector below months on mobile
@media screen and (max-width: 640px) {
  #event-selector {
    display: grid;
    gap: 10px;
    padding-top: 15px;
    font-size: 16px;
  }

  #event-sel-time {
    margin-left: 0;
  }
}

.edp-roles {
  margin-top: 0;
  padding-left: 1em;
  li {
    display: block;
  }
}

#gencalex_form {
  tr {
    td {
      padding-bottom: 1em;
    }
    
    td:first-child {
      vertical-align: top;
    }
    
    td:last-child {
      padding-left: .5em;
      
      label.gen_param_label {
        font-weight: bold;
      }
      
      .gencalex_subform {
        tr {
          td {
            padding-bottom: 0;
          }
        }
      }
    }
  }
}

#event-emails {
  padding: .5em 0;
  
  &>ul {
    padding: 0;
    margin-bottom: 0;
    
    &>li {
      display: block;
      
      h5 {
        font-size: 1em;
        background-color: #f7f7f7;
        padding: 10px;
        margin: 0;
        border-top: 1px solid #ccc;
        
        .arrow {
          display: block;
          float: right;
        }
        
        &:hover {
          cursor: pointer;
        }
      }
      
      .email {
        display: none;
        border-top: 1px solid #ccc;
        border-left: 0;
        border-right: 0;
        border-bottom: 0;
        
        .email-header {
          border-bottom: 1px solid #ccc;
        }
        
        .email-content {
          padding-top: 10px;
        }
      }
    }
  }
}

#new_event_role_application .notes {
  width: 100%;
}

